# negate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  _version.py  fractal_classifier.joblib  pyproject.toml  pytest.ini  texture_classifier_a.joblib
.github/workflows/: negate.yml
config/: blurb.toml  config.toml  config.yaml
models/: .gitattributes
models/20260225_183745/: negate.onnx  negate_pca.onnx  negate_pca.pkl
models/20260225_185933/: negate.onnx  negate.ubj  negate_metadata.npz  negate_pca.onnx  negate_pca.pkl
models/20260225_221149/: negate.onnx  negate.ubj  negate_metadata.npz  negate_pca.onnx  negate_pca.pkl
negate/: __init__.py  __main__.py  ae.py  chip.py  command.py  config.py  conversion.py  datasets.py  extract.py  feature_vae.py  feature_vit.py  fourier.py  fractal_classifier.joblib  heuristics.py  inference.py  plot.py  quantify.py  residuals.py  run_combinations.py  save.py  scaling.py  texture_classifier.joblib  to_onnx.py  track.py  train.py  types.py  wavelet.py
negate/decompose/: __init__.py  complex.py  edge.py  enhanced.py  gabor.py  hog.py  linework.py  numeric.py  patch.py  residuals.py  scaling.py  surface.py  surface_artwork.py  wavelet.py
negate/decompose/artwork/: __init__.py
negate/decompose/negate/decompose/: __init__.py
negate/extract/: __init__.py  combination.py  ensemble.py  feature_artwork.py  feature_conv.py  feature_learned.py  feature_style.py  feature_vae.py  feature_vit.py  unified.py  unified_core.py  unified_pipeline.py
negate/io/: blurb.py  config.py  console.py  datasets.py  logger.py  save.py  spec.py  to_onnx.py
negate/metrics/: __init__.py  heuristics.py  pdf.py  plot.py  plot_invert.py  plot_save.py  plot_tail.py  plot_tail_residual.py  plot_vae.py  track.py
results/: EXPERIMENTS.md  adversarial_robustness_results.json  clip_bias_defactify_results.json  combinations_results.json  experiments_results.json  fair_evaluation_results.json  hybrid_modern_results.json  imaginet_paintings_results.json  multidataset_benchmark_results.json  platform_robustness_results.json  plot_xp_data.json  results.json  results_20260130_154140.json  scale_evaluation_results.json  sensitivity_plot_20260207_172026.html  sensitivity_plot_20260207_185722.html  sensitivity_plot_20260207_211003.html  vae_comparison.txt
results/20260225_185933/: config.toml  results_20260225_185933.json
results/20260225_221149/: results_20260225_221149.json
results/20260403_224959/: results_real_20260403_224959.json
tests/: extract_cache.py  finetune_anime.py  generate_fair_eval_pdf.py  generate_final_report.py  generate_results_pdf.py  test_adversarial_robustness.py  test_argparse.py  test_artwork_accuracy.py  test_chip.py  test_clip_bias_defactify.py  test_complex_features.py  test_config.toml  test_config_data.toml  test_dataset.py  test_e2e.py  test_edge_features.py  test_enhanced_features.py  test_ensemble.py  test_experiments.py  test_extract.py  test_fair_evaluation.py  test_gabor_features.py  test_generate_dataset.py  test_hog_features.py  test_hybrid_modern.py  test_imaginet_paintings.py  test_import.py  test_inference_enums.py  test_linework_features.py  test_load_spec.py  test_main_help.py  test_metric.py  test_multidataset_benchmark.py  test_numeric_image.py  test_patch_features.py  test_plot_invert.py  test_plot_save.py  test_plot_tail.py  test_plot_tail_residual.py  test_plot_vae.py  (+10 more)
