# SPDX-License-Identifier: MPL-2.0 AND LicenseRef-Commons-Clause-License-Condition-1.0
# <!-- // /*  d a r k s h a p e s */ -->

[build-system]
requires      = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "darkshapes", email = "91800957+exdysa@users.noreply.github.com" },
]

name = "negate"
dynamic = ["version"]
description = "AIGC image detector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "huggingface-hub>=1.3.2",
    "matplotlib>=3.10.8",
    "mongoengine>=0.29.1",
    "numpy==2.4.1",
    "onnx>=1.20.1",
    "onnxconverter-common>=1.16.0",
    "onnxmltools>=1.15.0",
    "onnxoptimizer>=0.4.2",
    "pillow>=12.1.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.19.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.3",
    "xgboost>=3.1.3",
]
[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
[project.optional-dependencies]
# -- frameworks --

# -- accelerators --
cuda = [
    "torch",
    "torchvision",
]

cpu = [
    "torch",
    "torchvision",
]

mps = [
    "torch",
    "torchvision",
]

[project.urls]
Homepage      = "https://github.com/darkshapes/negate"

[project.scripts]
negate     = "negate.__main__:main"

[tool.uv]
torch-backend = "auto"
prerelease       = "allow"
preview          = true


conflicts = [
    [
        { extra = "cpu" },
        { extra = "mps" },
        { extra = "cuda" },
    ],
]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]

torchvision = [
    { index = "pytorch-cpu", extra="mps", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", extra="cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform == 'win32'" },
]

torch = [
    { index = "pytorch-cpu", extra = "mps", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", extra="cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", extra = "cuda", marker = "sys_platform == 'win32'" },

]

[tool.setuptools_scm]
write_to = "_version.py"

[tool.setuptools.packages.find]
where   = ["."]
include = ["negate*"]
exclude = ["tests*"]

[tool.ruff]
line-length    = 140
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.pycodestyle]
max-line-length               = 140
ignore-overlong-task-comments = true

[tool.pylint]
max-line-length = 140
ignore-paths    = ["^tests/.*$", "test_.*$"]
disable         = ["C0415"]

[tool.pyright]
include = ["nnll"]
exclude = [
    "^tests/.*$",
  "**/__pycache__", # cache directories
  "./typings",      # generated type stubs
]

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
default.extend-words = { "ot" = "ot", "convers" = "convers" }

